style.css
/* Variables */
@import url('https://googleapis.com');
@property --angle{
    syntax: "<angle>";
    initial-value: 0deg;
    inherits: false;
}
:root {
  --GVblue: #0032A0;
  --black: #181818;
  --white: #efefef;

  --linkColor:  #0ECBF0;
  --bigLake:  #3DD1CC;
  --midnight:  #13155C;
  --arboretum:  #4A0C6E;
  --carillonBrick:  #BA6F4C;
  --archway:  #DEC197;

  --pokeRed: red;
}
* {
    transition: all 0.25s ease-in-out;
}


/* Scrollbar Styles */
/* width */
::-webkit-scrollbar {
  width: 15px;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--white); 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--pokeRed); 
  box-sizing: border-box;
  border: 1px solid black;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: color-mix(in srgb, var(--pokeRed) 75%, black 25%); 
}


body{
  background: linear-gradient(to bottom, #84bfed 0%, #3333f1 100%);
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: none;
  gap: none;
  display: flex;
  flex-direction: column;
  align-self: center;
  align-items: center;

  /*Fonts */
  font-family: "Lexend", sans-serif;
  font-weight: 367
}

.banner {
  width: 100%;
  height: 100%;
  margin: none;
  max-height: 50vh;
  max-width: 100%;
  background-color: var(--GVblue);
  color: var(--GVblue);
  object-fit: contain;
}
.title {
  width: calc(100% - 40px);
  height: auto;
  margin: none;
  background-color: var(--GVblue);
  padding: 20px;
}

h1 {
  width: 95%;
  text-align: center;
  /*Fonts */
  font-family: "Lexend", sans-serif;
  font-weight: 600
}
h3 {
  width: 90%;
  text-align: center;
  /*Fonts */
  font-family: "Lexend", sans-serif;
  font-weight: 640.67
}

.welcome-text-container {
  width: 100%;
  margin-top: 15px;
}
.welcome-text-container img {
  width: 90%;
  margin-left: 5%;
  z-index: 0;
  justify-self: center;
  align-self: center;
}
.welcome-text-container p {
  z-index: 10;
  position: absolute;
  margin-left: 12%;
  width: 75%;
  margin-top: 6%;
  font-size: 4vw;
  font-family: 'Pixelify Sans';
}

.navButtons {
  justify-content: center;
  align-content: center;
  background-color: var(--black);
  width: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: row;
  gap: 10px;
}
.button {
  border-radius: 27.5%;
  color: white;
  text-align: center;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  width: 20%;
  aspect-ratio: 1/1;
  box-sizing: border-box;
  border: var(--white) 4px transparent;
  /*Fonts */
  font-family: "Lexend", sans-serif;
  font-weight: 900;
  object-fit: cover;
  overflow: hidden;
  
}
.button:hover {
  border: solid;
}
.button img {
  width: 75%;
  aspect-ratio: 1/1;
}

.button1 {background-color: #0032A0; border-radius:5px;}
.button2 {background-color: #4A0C6E; border-radius:5px;}
.button3 {background-color: #13155C; border-radius:5px;}

.contactInfo {
  justify-content: center;
  align-content: center;
  background-color: var(--black);
  width: 100%;
  height: auto;
  max-height: 15vh;
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: row;
  gap: 30px;
}
.contactInfo img {
  width: 100%;
  aspect-ratio: 1/1;
}
.contactInfo .button {
  height: 10vh;
  width: auto;
}
.contactInfo button:hover {
  border: var(--GVblue) solid;
}

.contact-info-section {
  width: 100%;
  height: 100%;
  border: 2px solid white;
  z-index: 2000;
  display: flex;
  flex-direction: row;
}
.contact-info-section .button {
  margin-right: 10px;
}
.contact-info-section p {
  color: white;

}

.dhelmise-img {
  max-height: 40dvh;
  width: auto;
}


.open-pokedex-text {
  font-size: 4vw;
}
/* Everything needed for the Mini Gallery */
.top-cap {
  background-color: rgb(202, 7, 7);
  color: #fff;
  border-bottom: 5px solid var(--black);
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;

  margin: -15px;
  margin-bottom: 15px;
  margin-top: -20px;

  height: 10vh;
  display: flex;

  justify-content: center;
  align-content: center;

  overflow: visible;
  z-index: 10;

  position: relative;
}
.top-cap p {
  font-size: 4vh;
  font-weight: bolder;
  margin-top: 20px;
}
.mini-gallery-btn {
  height: 10vh;
  aspect-ratio: 1/1;
  background-color: var(--black);
  border: 8px solid var(--black);
  border-radius: 50%;
  position: absolute;
  justify-items: center;
  align-content: center;
  top: 25%;                        
  left: 50%;                       
  transform: translate(-50%, 0%);
  margin-top: 20px;
}
.button-circle {
  width: 75%;
  height: 75%;
  border-radius: 50%;
  background-color: var(--bigLake);
  border: 2px solid var(--bigLake);
}
.glow {
  animation: glow 2s ease-in-out infinite alternate;
}
.mini-gallery-btn:hover .button-circle{
  background-color: var(--black);
}
.bottom-cap {
  background-color: #fff;
  border-top: 5px solid var(--black);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;

  margin: -15px;
  margin-bottom: -20px;

  height: 10vh;
}
.slider, .slider * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.slider {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  overflow-y: hidden;
}
.slide {
  position: relative; /* Need for video background */
  flex: 1 0 100%;
  width: 100%;
  height: 100%;
  scroll-snap-align: start;
  object-fit: cover;
  scroll-margin-top: calc(15vh + 144px);
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 15px;
  gap: 15px;
}
.slider-nav {
  display: none;
  position: relative;
  column-gap: 1.1rem;
  justify-self: center;
  margin-top: 3vh;
}
.slider-nav a {
  width: 0.85rem;
  height: 0.85rem;
  border-radius: 50%;
  background-color: black;
  opacity: 0.75;
  transition: opacity ease 0.25s;
}
.slider-nav a:hover {
  opacity: 1;
}
.slider-nav a.active {
  background-color: rgb(202, 7, 7);
  opacity: 1;
}

.slide-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  flex: 1 0 100%;
  width: 100%;
  height: 100%;
  scroll-snap-align: start;
  padding: 15px;
  padding-top: 20px;
  gap: 15px;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.75);
  border: 4px solid black;
  border-radius: 10px;
  overflow-y: scroll;
}
.slide-content article {
  align-items: center;
  justify-content: center;
  text-align: center;
}
section {
  background-color: transparent !important;
  color: black;
  padding: 15px;
  margin-top: 50px;
  margin-left: 20px;
  margin-right: 20px;
  border-radius: 10px;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  scroll-margin-top: 100px;
  max-width: 90%;
}
.section-content {
  display: block;
  align-items: center;
  max-height: 0;
  height: 100vh;
  margin-top: -15px;
  margin-bottom: 15px;
  background-image: linear-gradient(
    in srgb var(--angle), 
    color-mix(in srgb, var(--bigLake) 25%, white 75%),
    color-mix(in srgb, var(--bigLake) 100%, white 0%),
    color-mix(in srgb, var(--bigLake) 25%, white 75%),
    color-mix(in srgb, var(--bigLake) 100%, white 0%));
  animation: 6s spin linear infinite;
}
section img {
  border: none;
  border-radius: 10px;
  max-width: 50%;
  width: auto;
  height: 100%;
  object-fit: contain;
}
section.active .section-content {
  max-height: 60vh;
}
section.active .button-circle {
  background-color: #fff;
}
section.active .slider {
  padding-top: 5vh;
}
section.active .slider-nav {
  display: flex;
}
section ::-webkit-scrollbar-track {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.schedule-section {
  background-color: #DEC197;
  width: 100%;
  padding-top: 5%;
  padding-bottom: 5%;
  gap: 10px;
  align-items: center;
  justify-content: center;
  display: grid;
  grid-template-columns: auto auto;
}
.schedule-title {
  background-color: white;
  border: 2px solid black;
  border-radius: 5px;
  padding-top: 5px;
  padding-bottom: 5px;
}
.schedule-section h2 {
  margin: 15px;
}
.schedule-section img {
  width: 50%;
}
.schedule-title {
  grid-column: 1 / -1;
  grid-row: 1;
  align-self: center;
  justify-self: center;
}
.schedule-section h2:nth-of-type(1) {
  grid-column: 2;
  grid-row: 2;
}
.schedule-section h2:nth-of-type(2) {
  grid-column: 2;
  grid-row: 3;
}
.schedule-section img {
  grid-column: 1;
  grid-row: 2 / 5;
  justify-self: center;
  width: 50%;
}
.schedule-section h2:nth-of-type(3) {
  grid-column: 1 / -1;
  grid-row: 5;
}
.schedule-section h3 {
  grid-column: 1 / -1;
  grid-row: 6;
  justify-self: center;
  text-align: center;
  justify-content: center;
}


footer {
  margin-bottom: 15px;
  padding: 20px;
  width: 25%;
  min-width: 200px;
  text-align: center;
  align-content: center;
  border: 2px solid black;
  color: rgb(160, 212, 255);
}
footer a {
  color: #efefef;
}



/* Keyframes for Animations*/
@keyframes spin{
  from{
    --angle: 0deg;
  }
  to{
    --angle: 360deg;
  }
}

@keyframes glow{
  from{
    background-color: #0ECBF0;
  }
  to{
    background-color: #000000;
  }
}

.slider2 {
  position:relative;
  width:100%;
  margin:auto;
  overflow:hidden;

}
.gal-slides img{
  width: 100%;
  display: none;
}

img.displaySlide{
  display:block;
  animation-name: fade;
  animation-duration: 1.5s;
}

.slider2 button{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  font-size: 2rem;
  padding: 10px 15px;
  background-color: hsla(0,0%,0%,0.5);
  color: white;
  border: none;
  cursor: pointer;
}

.prev{
  left: 0;
}
.next{
  right: 0;
}

@keyframes fade{
  from {opacity: .5}
  to {opacity: 1}
}


@media screen and (max-width: 800px){
  .slide-content {
    flex-direction: column;
  }


  .schedule-section {
    display: flex;
    flex-direction: column;
  }
  
}

